fix accessibility contrast ratio thresholds (#715)

--- a/samples/src/Microsoft.Azure.IIoT.App/src/wwwroot/css/site.css
+++ b/samples/src/Microsoft.Azure.IIoT.App/src/wwwroot/css/site.css
@@ -365,7 +365,7 @@ a.adhocmargin {
 }
 
 .subtitle {
-    color: gray;
+    color: #6D6C6C;
     font-weight: bold;
     white-space: pre-wrap;
     margin-bottom: 15px;
